@@ -29,3 +29,4 @@ vignette2/beyersmann/
 tests/plot1.pdf
 temp
 vignettes/old
+fail/figure
